<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/main_ll"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/lblAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_amount"
        style="@style/MarginTop"
        />
    <EditText
        android:id="@+id/txtAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintAmount"
        style="@style/StyleEditText"
        />

    <TextView
        android:id="@+id/lblFrom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/from_currency"
        style="@style/MarginsLateral"/>

    <RadioGroup
        android:id="@+id/rgFromCurrency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@style/MarginBottom">
        <RadioButton
            android:id="@+id/rbFromDollar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dollar"
            style="@style/MarginsRButton"/>
        <RadioButton
            android:id="@+id/rbFromEuro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/euro"
            android:checked="true"
            style="@style/MarginsRButton"/>
        <RadioButton
            android:id="@+id/rbFromPound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pound"
            style="@style/MarginsRButton"/>
        <ImageView
            android:id="@+id/imgFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:scaleType="centerCrop" />
    </RadioGroup>

    <TextView
        android:id="@+id/lblTo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="To currency"
        style="@style/MarginsLateral"/>

    <RadioGroup
        android:id="@+id/rgToCurrency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@style/MarginBottom">
        <RadioButton
            android:id="@+id/rbToDollar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dollar"
            android:checked="true"
            style="@style/MarginsRButton" />
        <RadioButton
            android:id="@+id/rbToEuro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/euro"
            style="@style/MarginsRButton"/>
        <RadioButton
            android:id="@+id/rbToPound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pound"
            style="@style/MarginsRButton"/>
        <ImageView
            android:id="@+id/imgTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:scaleType="centerCrop"/>
    </RadioGroup>

    <Button
        android:id="@+id/btnExchange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exchange"
        style="@style/MarginsLateral"/>

</LinearLayout>